Fixes pages Example - fixes picto arrow decollapsing at page refresh (in breadcrumb)

--- a/src/sass/ui_example.sass
+++ b/src/sass/ui_example.sass
@@ -35,6 +35,10 @@
 				.fas, .far
 					font-size : .6em
 					margin : 0 8px
+					display : inline-block
+					min-width : 8px
+					position : relative
+					top : -1px
 				.current
 					font-family : 'semibold'
 				.text-link:hover
